# defi-risk-agent

./: .gitignore  README.md  flake.nix  pyproject.toml
scripts/: setup-ollama.sh
src/: __init__.py
src/agents/: __init__.py  data_agent.py  llm_analyst.py  report_agent.py  risk_agent.py  supervisor.py
src/api/: __init__.py  main.py
src/cli/: __init__.py  main.py
src/graph/: __init__.py  workflow.py
src/llm/: __init__.py  provider.py
src/models/: __init__.py  schemas.py
src/tools/: __init__.py  defillama.py  rekt_scraper.py  risk_metrics.py
tests/: __init__.py  test_agents.py  test_api.py  test_defillama.py  test_integration_incidents.py  test_rekt_scraper.py  test_risk_metrics.py  test_workflow.py
