[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defi-risk-agent"
version = "0.1.0"
description = "Multi-agent DeFi protocol risk analysis system built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ricardo Ledan" }
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
defi-risk = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
